# AlgeTest

./: .gitignore  AlgeTest.cpp  AlgeTest.h  AlgeTestConfig.h  AlgeTestConfig.h.in  CMakeLists.txt
Field/: Field.h
LinearAlgebra/: Matrix.h
Numer/: Num.cpp  Num.h  NumR.cpp  NumR.h  NumZ.cpp  NumZ.h
Set/: Set.h
